# SchoolAutomaton

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  README.md  SPEC.md  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  constants.py  security.py  tasks.py
backend/app/data/: badges.yaml  crisis_resources.yaml  curricula.yaml  patterns.yaml
backend/app/db/: base.py  bootstrap.py  session.py
backend/app/llm/: __init__.py  client.py  grader.py  lesson_generator.py  orchestrator.py  quiz_generator.py
backend/app/models/: __init__.py  admin.py  content.py  gamification.py  learning.py  profile.py  quiz.py  visual.py
backend/app/sanitization/: __init__.py  audit.py  classifier.py  preprocess.py  ratelimit.py  safety.py  validate.py
backend/app/schemas/: __init__.py  admin.py  common.py  content.py  enums.py  gamification.py  generation.py  intent.py  profile.py  questions.py  quiz.py
backend/app/services/: badges.py  gamification.py  interleave.py  leveling.py  mastery.py  profile_service.py  recommendation_service.py  (+2 more)
backend/tests/: conftest.py  test_bootstrap.py  test_classifier.py  test_config_guard.py  test_curriculum.py  test_gamification.py  test_generation.py  test_injection_corpus.py  test_leveling.py  test_llm_client.py  test_mastery.py  test_no_raw_leak.py  test_payload_integrity.py  test_profiles_flow.py  test_sanitization.py  test_srs.py  test_srs_rating.py  test_visuals.py
(+122 files in other folders)
