[project]
name = "schoolautomaton-backend"
version = "0.1.0"
description = "SchoolAutomaton backend — sanitize, generate study/test content, gamify."
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = [
    "B008",    # FastAPI Depends() in defaults is idiomatic
    "UP046",   # keep classic Generic[T] for pydantic generic models
    "E501",    # long descriptive strings / data tables are fine; we wrap code lines manually
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
